--- a/MachFive/MachFive.csproj
+++ b/MachFive/MachFive.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ASM32\Instruction87.cs" />
     <Compile Include="ASM32\Operand.cs" />
     <Compile Include="MachFive.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WIN32\CodeSection.cs" />
     <Compile Include="WIN32\ResourceParser.cs" />
