--- a/MachFive/MachFive.csproj
+++ b/MachFive/MachFive.csproj
@@ -49,7 +49,9 @@
     <Compile Include="ASM32\Instruction0F.cs" />
     <Compile Include="ASM32\Instruction87.cs" />
     <Compile Include="ASM32\Operand.cs" />
+    <Compile Include="Linker.cs" />
     <Compile Include="MachFive.cs" />
+    <Compile Include="Module.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WIN32\CodeSection.cs" />
