--- a/MachFive/MachFive.csproj
+++ b/MachFive/MachFive.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WIN32\CodeSection.cs" />
-    <Compile Include="WIN32\ResourceParser.cs" />
+    <Compile Include="WIN32\ResourceSection.cs" />
     <Compile Include="WIN32\Section.cs" />
     <Compile Include="WIN32\SourceFile.cs" />
     <Compile Include="WIN32\Win32Exe.cs" />
