--- a/MachFive/MachFive.csproj
+++ b/MachFive/MachFive.csproj
@@ -56,11 +56,10 @@
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WIN32\CodeSection.cs" />
-    <Compile Include="WIN32\ResourceSection.cs" />
+    <Compile Include="WIN32\ResourceTable.cs" />
     <Compile Include="WIN32\Section.cs" />
     <Compile Include="WIN32\SourceFile.cs" />
     <Compile Include="WIN32\Win32Exe.cs" />
-    <Compile Include="WIN32\Win32File.cs" />
     <Compile Include="WIN32\Win32Header.cs" />
     <Compile Include="WIN32\Win32Obj.cs" />
   </ItemGroup>
