--- a/MachFive/MachFive.csproj
+++ b/MachFive/MachFive.csproj
@@ -53,15 +53,20 @@
     <Compile Include="Loader.cs" />
     <Compile Include="MachFive.cs" />
     <Compile Include="Module.cs" />
-    <Compile Include="Node.cs" />
+    <Compile Include="AST\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WIN32\CodeSection.cs" />
+    <Compile Include="WIN32\OutputFile.cs" />
     <Compile Include="WIN32\ResourceTable.cs" />
     <Compile Include="WIN32\Section.cs" />
     <Compile Include="WIN32\SourceFile.cs" />
     <Compile Include="WIN32\Win32Exe.cs" />
-    <Compile Include="WIN32\Win32Header.cs" />
+    <Compile Include="WIN32\Win32Coff.cs" />
     <Compile Include="WIN32\Win32Obj.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CodeGenerator\" />
+    <Folder Include="SymbolTable\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
