--- a/MachFive/MachFive.csproj
+++ b/MachFive/MachFive.csproj
@@ -56,6 +56,8 @@
     <Compile Include="AST\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WIN32\CodeSection.cs" />
+    <Compile Include="WIN32\ExportTable.cs" />
+    <Compile Include="WIN32\ImportTable.cs" />
     <Compile Include="WIN32\OutputFile.cs" />
     <Compile Include="WIN32\ResourceTable.cs" />
     <Compile Include="WIN32\Section.cs" />
