--- a/Dynamo/Dynamo.csproj
+++ b/Dynamo/Dynamo.csproj
@@ -46,9 +46,14 @@
   <ItemGroup>
     <Compile Include="ASM32\i32Disasm.cs" />
     <Compile Include="ASM32\Instruction.cs" />
-    <Compile Include="ASM32\Instruction0F.cs" />
     <Compile Include="ASM32\Instruction87.cs" />
+    <Compile Include="ASM32\InstructionGen.cs" />
+    <Compile Include="ASM32\InstructionMMX.cs" />
+    <Compile Include="ASM32\InstructionSSE.cs" />
+    <Compile Include="ASM32\InstructionSSE2.cs" />
+    <Compile Include="ASM32\InstructionSys.cs" />
     <Compile Include="ASM32\Operand.cs" />
+    <Compile Include="ASM32\Register.cs" />
     <Compile Include="ASM32\Symbol.cs" />
     <Compile Include="Linker.cs" />
     <Compile Include="Loader.cs" />
@@ -56,13 +61,11 @@
     <Compile Include="Module.cs" />
     <Compile Include="AST\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WIN32\CodeSection.cs" />
     <Compile Include="WIN32\ExportTable.cs" />
+    <Compile Include="WIN32\FileIO.cs" />
     <Compile Include="WIN32\ImportTable.cs" />
-    <Compile Include="WIN32\OutputFile.cs" />
     <Compile Include="WIN32\ResourceTable.cs" />
     <Compile Include="WIN32\Section.cs" />
-    <Compile Include="WIN32\SourceFile.cs" />
     <Compile Include="WIN32\Win32Exe.cs" />
     <Compile Include="WIN32\Win32Coff.cs" />
     <Compile Include="WIN32\Win32Obj.cs" />
