--- a/Dynamo/Dynamo.csproj
+++ b/Dynamo/Dynamo.csproj
@@ -58,12 +58,14 @@
     <Compile Include="AST\DeclarNode.cs" />
     <Compile Include="AST\ExprNode.cs" />
     <Compile Include="AST\StmtNode.cs" />
+    <Compile Include="CodeGenerator\CodeGen.cs" />
     <Compile Include="Linker.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Dynamo.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="AST\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolTable\SymTable.cs" />
     <Compile Include="WIN32\ExportTable.cs" />
     <Compile Include="WIN32\FileIO.cs" />
     <Compile Include="WIN32\ImportTable.cs" />
@@ -73,10 +75,7 @@
     <Compile Include="WIN32\Win32Coff.cs" />
     <Compile Include="WIN32\Win32Obj.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CodeGenerator\" />
-    <Folder Include="SymbolTable\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
