--- a/Dynamo/Dynamo.csproj
+++ b/Dynamo/Dynamo.csproj
@@ -55,15 +55,14 @@
     <Compile Include="ASM32\Operand.cs" />
     <Compile Include="ASM32\Register.cs" />
     <Compile Include="ASM32\Symbol.cs" />
-    <Compile Include="AST\DeclarNode.cs" />
-    <Compile Include="AST\ExprNode.cs" />
-    <Compile Include="AST\StmtNode.cs" />
+    <Compile Include="Assembler\Assembler.cs" />
     <Compile Include="CodeGenerator\CodeGen.cs" />
-    <Compile Include="Linker.cs" />
-    <Compile Include="Loader.cs" />
+    <Compile Include="ENAML\EnamlData.cs" />
+    <Compile Include="OIL\OILCan.cs" />
     <Compile Include="Dynamo.cs" />
-    <Compile Include="Module.cs" />
-    <Compile Include="AST\Node.cs" />
+    <Compile Include="Options.cs" />
+    <Compile Include="OIL\OILNode.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolTable\SymTable.cs" />
     <Compile Include="WIN32\ExportTable.cs" />
@@ -71,11 +70,8 @@
     <Compile Include="WIN32\ImportTable.cs" />
     <Compile Include="WIN32\ResourceTable.cs" />
     <Compile Include="WIN32\Section.cs" />
-    <Compile Include="WIN32\Win32Exe.cs" />
     <Compile Include="WIN32\Win32Coff.cs" />
-    <Compile Include="WIN32\Win32Obj.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
