--- a/Dynamo/Dynamo.csproj
+++ b/Dynamo/Dynamo.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ASM32\Register.cs" />
     <Compile Include="ASM32\Symbol.cs" />
     <Compile Include="Assembler\Assembler.cs" />
+    <Compile Include="CodeGenerator\CGNode.cs" />
     <Compile Include="CodeGenerator\CodeGen.cs" />
     <Compile Include="ENAML\EnamlData.cs" />
     <Compile Include="OIL\OILCan.cs" />
@@ -64,7 +65,6 @@
     <Compile Include="OIL\OILDrum.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="OIL\OILNode.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolTable\SymTable.cs" />
     <Compile Include="WIN32\ExportTable.cs" />
