switched to using Assembler class to collect instruction list and write out to .asm file

--- a/Dynamo/Dynamo.csproj
+++ b/Dynamo/Dynamo.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ASM32\Assembly.cs" />
     <Compile Include="ASM32\Expression.cs" />
     <Compile Include="ASM32\i32Disasm.cs" />
     <Compile Include="ASM32\Instruction.cs" />
@@ -57,7 +58,6 @@
     <Compile Include="ASM32\Directive.cs" />
     <Compile Include="ASM32\PseudoOp.cs" />
     <Compile Include="ASM32\Register.cs" />
-    <Compile Include="ASM32\Symbol.cs" />
     <Compile Include="Assembler\Assembler.cs" />
     <Compile Include="CodeGenerator\CGNode.cs" />
     <Compile Include="CodeGenerator\CodeGen.cs" />
